# rust-from-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  MyBenchmark.cpp  MyBenchmark.h
inc/: header.h
ruster/: CMakeLists.txt  Cargo.toml
ruster/.cargo/: config.toml
ruster/src/: lib.rs
