[package]
name = "ruster"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"

[[bin]]
name = "rust-tester"
path = "bin/rust_jump_tester.rs"

[lib]
crate-type = ["staticlib", "lib"]

[profile.release]
codegen-units = 1
lto = "fat"


[profile.release-with-debug]
inherits = "release"
debug = true
