[package]
name = "ruster"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = { version = "1.0.89", default-features = false, features = ["alloc"] }

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1
lto = "fat"

[profile.release-with-debug]
inherits = "release"
debug = true
